2022-07-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am (font/devpdf/download): Call
	"BuildFoundries" with new `--strict` option so that the build
	fails if the AFM files for the URW fonts can't be found.

2022-07-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl: Add Boolean-value scalar
	`beStrict` (defaults false) and new command-line option
	`--strict` to make it true.
	(LoadFoundry): Check return value of subroutine `LocateAF`.
	Emit diagnostic if it is null, as a warning if not "strict", and
	fatal if so.

2022-07-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am (font/devpdf/util/BuildFoundries): Add
	dependency on "afmtodit" since "BuildFoundries" calls this
	program when generating groff font description files from URW
	fonts.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Fix Savannah #62690.

	* tmac/s.tmac (P1, SC, UC, P2): Drop undocumented support for
	document-private macros used by Kernighan & Cherry's
	"Typesetting Mathematics -- User's Guide (Second Edition)".

	Fixes <https://savannah.gnu.org/bugs/?62690>.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Fix Savannah #62688.

	* tmac/s.tmac (DE): Set no-space mode when ending displays.
	(@EN): Set no-space mode after outputting the display distance
	so that it doesn't combine with inter-paragraph space.

	Fixes <https://savannah.gnu.org/bugs/?62688>.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Regression-test Savannah #62688.

	* tmac/tests/s_no-excess-space-around-displays.tmac: Do it.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Fix Savannah #62687.

	* tmac/s.tmac (@MC): Honor `MINGW` register even when setting
	only two columns, as clearly implied by our documentation.

	Fixes <https://savannah.gnu.org/bugs/?62687>.
